LMYC-25: paginated ClienteViewSet
