# docs/swagger.yaml
@@ -82,16 +82,23 @@ paths:
     get:
       tags:
         - Clients
-      summary: "Get all clients"
+      summary: "Get all clients or filter them by name"
+      parameters:
+        - in: query
+          name: nombre
+          description: "Client's name"
+          required: false
+          schema:
+            type: string
       responses:
         200:
-          description: "List containing all the clients"
+          description: "Paginated clients list"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Client"
+                  $ref: "#/components/schemas/PaginatedClients"
     post:
       tags:
         - Clients
@@ -152,25 +159,6 @@ paths:
           description: "Client updated"
         404:
           description: "Client not found"
-  /clientes/buscar:
-    get:
-      tags:
-        - Clients
-      summary: "Get clients searching by name"
-      parameters:
-        - in: query
-          name: nombre
-          description: "Client's name"
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: "List of clients matching the name"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ClientSearchResultList"
   /generar_stock_pdf:
     get:
       tags:
@@ -395,7 +383,7 @@ paths:
   /productos/:
     get:
       tags:
-        - Clients
+        - Products
       summary: "Get all products"
       responses:
         200:
@@ -662,6 +650,18 @@ paths:
 
 components:
   schemas:
+    PaginationItems:
+      type: object
+      properties:
+        count:
+          type: integer
+          example: 1
+        next:
+          type: string
+          example: ".../resource/?page=3"
+        previous:
+          type: string
+          example: ".../resource/?page=1"
     Client:
       type: object
       required:
@@ -691,22 +691,15 @@ components:
         email:
           type: string
           example: "matiasadrianpp4@gmail.com"
-    SimplifiedClient:
-      type: object
-      properties:
-        codigo:
-          type: integer
-          example: 62
-        nombre:
-          type: string
-          example: "Juan Perez"
-    ClientSearchResultList:
-      type: "object"
-      properties:
-        clientes:
-          type: array
-          items:
-            $ref: "#/components/schemas/SimplifiedClient"
+    PaginatedClients:
+      allOf:
+        - $ref: "#/components/schemas/PaginationItems"
+        - type: object
+          properties:
+            results:
+              type: array
+              items:
+                $ref: "#/components/schemas/Client"
     Invoice:
       type: object
       properties:
